<?xml version="1.0"?>
<package format="2">
  <name>vehicle_state</name>
  <version>0.1.0</version>
  <description>The vehicle_state package</description>

  <maintainer email="melshouni@wpi.edu">mahdi elhousni</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
